Fix page scrollable on mobile by using svh instead of vh

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	min-height: 100vh;
+	min-height: 100svh;
 	display: flex;
 	align-items: center;
 }
